# Trimmr

./: Cargo.toml  FLOWS.md  LIST.md  README.md  implementationconcencept.md
src/: main.rs
src/commands/: cost.rs  debug.rs  git.rs  mod.rs
src/filters/: git.rs  mod.rs
tests/integration/: git_tests.rs
