[package]
name = "trimr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trimr"
path = "src/main.rs"

[dependencies]
clap    = { version = "4.5", features = ["derive"] }
anyhow  = "1.0"
colored = "2.1"

# Phase 2 (grep/find) — unused in Phase 1 but declare now
ignore  = "0.4"    # .gitignore-aware dir walk
regex   = "1.10"   # test runner output parsing

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile   = "3.10"

[[test]]
name = "git_tests"
path = "tests/integration/git_tests.rs"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
